--- a/app/src/main/res/layout/dialog_bottomsheet.xml
+++ b/app/src/main/res/layout/dialog_bottomsheet.xml
@@ -11,18 +11,21 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/btViewUser"
         android:textAllCaps="false"
         android:text="View User"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/btDeleteUser"
         android:textAllCaps="false"
         android:text="Delete User"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/btSearchUser"
         android:textAllCaps="false"
         android:text="Search User"
         android:layout_width="match_parent"
