--- a/app/src/main/res/layout/activity_view_user.xml
+++ b/app/src/main/res/layout/activity_view_user.xml
@@ -1,25 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/apl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:layout_alignParentTop="true"
+                app:title="@string/Manage_users"
+                app:titleTextColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.AppBarLayout>
 
 
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/tvName"
-        android:textColor="@color/blue"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_below="@+id/apl"
+            android:background="@color/cardview_shadow_start_color"
+            android:id="@+id/rcUser"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/ic_add"
+        android:layout_marginBottom="40dp"
+        android:layout_marginRight="10dp"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 
-    <android.support.v7.widget.RecyclerView
-        android:background="@color/cardview_shadow_start_color"
-        android:id="@+id/rcUser"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-
-    </android.support.v7.widget.RecyclerView>
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
